--- a/package.json
+++ b/package.json
@@ -1,24 +1,55 @@
 {
-  "name": "eventtarget",
-  "version": "0.1.0",
-  "description": "W3C JavaScript events for custom objects",
-  "main": "EventTarget.js",
+  "name": "event-target-mixin",
+  "version": "0.2.0",
+  "description": "JavaScript W3C EventTarget mixin for custom objects.",
+  "main": "dist/event-target-mixin.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode=build",
+    "dev": "webpack --progress --colors --watch --mode=dev",
+    "test": "mocha --compilers js:babel-core/register --colors -w ./test/*.spec.js"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/ShareIt-project/EventTarget.js.git"
+    "url": "git+https://github.com/p37z3n/event-target-mixin.js.git"
   },
   "keywords": [
-    "EventTarget",
+    "addeventlistener",
+    "dispatchevent",
+    "dom",
+    "event",
+    "eventlistener",
     "events",
-    "W3C"
+    "eventtarget",
+    "html",
+    "interface",
+    "javascript",
+    "mixin",
+    "removeeventlistener",
+    "w3c"
   ],
-  "author": "Mr. Doob (http://mrdoob.com)",
+  "author": "Peter Tseng",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ShareIt-project/EventTarget.js/issues"
+    "url": "https://github.com/p37z3n/event-target-mixin.js/issues"
   },
-  "homepage": "https://github.com/ShareIt-project/EventTarget.js"
+  "homepage": "https://github.com/p37z3n/event-target-mixin.js",
+  "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.18.2",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.9",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-es2015": "^6.18.0",
+    "chai": "^3.5.0",
+    "eslint": "^3.11.1",
+    "eslint-config-airbnb-base": "^10.0.1",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-import": "^2.2.0",
+    "mocha": "^3.2.0",
+    "webpack": "^1.14.0",
+    "yargs": "^6.5.0"
+  },
+  "publishConfig": {
+    "registry": "https://nexus.aspera.us/content/repositories/npm-internal/"
+  }
 }
