--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "event-target-mixin",
-  "version": "0.2.1",
+  "version": "1.0.0",
   "description": "JavaScript W3C EventTarget mixin for custom objects.",
-  "main": "dist/event-target-mixin.js",
+  "main": "index.js",
   "scripts": {
-    "build": "webpack --mode=build",
-    "dev": "webpack --progress --colors --watch --mode=dev",
-    "test": "mocha --compilers js:babel-core/register --colors -w ./test/*.spec.js"
+    "debug": "NODE_ENV='development' webpack -d",
+    "build": "NODE_ENV='production' webpack -p"
   },
   "repository": {
     "type": "git",
@@ -34,21 +33,17 @@
   },
   "homepage": "https://github.com/p37z3n/event-target-mixin.js",
   "devDependencies": {
-    "babel": "^6.5.2",
     "babel-core": "^6.18.2",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.9",
-    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.18.0",
-    "chai": "^3.5.0",
     "eslint": "^3.11.1",
-    "eslint-config-airbnb-base": "^10.0.1",
+    "eslint-config-airbnb-base": "^11.1.3",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-import": "^2.2.0",
-    "mocha": "^3.2.0",
-    "webpack": "^1.14.0",
-    "yargs": "^6.5.0"
+    "webpack": "^2.3.3"
   },
+  "dependencies": {},
   "publishConfig": {
     "registry": "https://nexus.aspera.us/content/repositories/npm-internal"
   }
